Ollama/ingress-mgc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama-app-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  rules:
    - host: ollama.beloni.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ollama-app-svc
                port:
                  number: 80
